Fixing up the about page

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -113,3 +113,12 @@ ion-app.wp [padding] .scroll-content {
   padding-top: 10px;
   padding-bottom: 10px;
 }
+
+.bigger {
+  text-align: center;
+  font-size: larger;
+}
+
+.smaller {
+  font-size: smaller;
+}
