Info page formatting

--- a/src/pages/howto/howto.scss
+++ b/src/pages/howto/howto.scss
@@ -14,4 +14,17 @@ page-howto {
   .howtoslide {
     background-color: map_get($colors, background);
   }
+
+  .howtobutton {
+    width: 50vw;
+  }
+
+  .blank {
+    height: 5vh !important;
+  }
+
+  .swiper-slide {
+    overflow-y: scroll;
+    display: block;
+  }
 }
